<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/backdrop"
            android:scaleType="centerCrop"
            android:src="@color/grey_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:background="@drawable/detail_background"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/img_container"
                    android:layout_width="130dp"
                    android:layout_height="195dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/grey_400"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/img_poster"
                        android:scaleType="fitXY"
                        tools:src="@color/grey_400" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/titleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
                    app:layout_constraintStart_toEndOf="@+id/img_container"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <ImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:contentDescription="@string/title_favorite"
                    android:src="@drawable/ic_favorite_outline_grey_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_tagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/grey_400"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_star_18"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
                    tools:text="@string/number" />

                <TextView
                    android:id="@+id/tv_rating_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/grey_400"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_rating"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
                    tools:text="@string/rating_count" />

                <TextView
                    android:id="@+id/tv_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_rating"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rating"
                    tools:text="@string/release" />

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_release"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release"
                    tools:text="@string/duration" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title_overview"
                style="@style/headStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_content" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_overview"
                tools:text="@string/overview" />

            <TextView
                android:id="@+id/tv_title_genre"
                style="@style/headStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title_genre"
                app:layout_constraintTop_toBottomOf="@id/tv_title_genre"
                app:selectionRequired="false"
                app:singleSelection="false" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/detail_shimmer"
                    tools:visibility="gone" />

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>